portfolio/src/main/webapp/style.css
html {
  scroll-padding-top: 50px; 
}

comment-element{
  display: block;
  background-color: white;
  margin-top: 5px;
  margin-bottom:5px;
  padding-left: 5px;
  border: 5px solid whitesmoke;
  border-inline-start-color: plum;
}

#content {
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 30px;
  width: 650px;
}
.container {
  position: relative;
  text-align: center;
  width: 100%;
  font: italic 22px/40px Georgia, serif;
  color: white;
  margin-top: 60px;
  margin-left: 0;
  margin-right: 0;
}

.centered {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}
.column {
  float: center;
  width: 50%;
  padding: 20px;
}

.row::after {
  content: "";
  clear: both;
  display: table;
}

.flip-card {
  background-color: transparent;
  width: 300px;
  height: 300px;
  perspective: 1000px;
}

.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.6s;
  transform-style: preserve-3d;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front, .flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}


.flip-card-front {
  background-color: lightgray;
  color: black;
}

.flip-card-back {
  background-color:plum;
  color: white;
  transform: rotateY(180deg);
}


.topnav {
  overflow: hidden;
  background-color:transparent;
  position: fixed; 
  top: 0; 
  width: 100%; 
}

.topnav a {
  float: right;
  color: plum;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.topnav a:hover {
  background-color: plum;
  color: white;
}

.fa {
  padding: 20px;
  font-size: 30px;
  width: 30px;
  text-align: center;
  text-decoration: none;
  margin: 5px 2px;
  border-radius: 50%;
  background: transparent;
  color: plum;
}

.fa:hover {
    background:plum;
    color: white;
    opacity: 0.5;
}

input[type=submit]{
  background-color: plum;
  border: none;
  color: white;
}

